<resources>
    <string name="app_name">Growbe</string>
    <string name="welcome">Welcome to GrowBe application</string>
    <string name="found">Found</string>
    <string name="monitor">Monitor</string>
    <string name="submit">Submit</string>
    <string name="select">Select the GrowBe to configure</string>
    <string name="no_growbe">There is no GrowBe to configure</string>
    <string name="hint_name">Name (e.g. Tomatoes)</string>
    <string name="hint_ssid">Network SSID</string>
    <string name="hint_psk">Pre-Shared key</string>
    <string name="hint_server1">Local server address</string>
    <string name="hint_server2">Internet server address</string>
    <string-array name="WifiAuth">
        <item>WPA/WPA2 PSK</item>
        <item>802.1x EAP</item>
        <item>WEP</item>
        <item>None</item>
    </string-array>
</resources>
