<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.growbe.growbe.ProvActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/deviceName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp" />

    <EditText
        android:id="@+id/ssidName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/hint_ssid"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/preSharedKey"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/hint_psk"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssidName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/localServer"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginBottom="67dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="@string/hint_server1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/internetServer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/authSpinner"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/internetServer"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/hint_server2"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="145dp" />

    <Spinner
        android:id="@+id/authSpinner"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/preSharedKey"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:onClick="clickHandlerProv"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
